# bagelquant-bt

./: .gitignore  LICENSE  README.md  factor_summary_report_missing_price_keys.csv  pyproject.toml
docs/: concepts.md  factor-evaluation.md  index.md  quick-start.md  transaction-costs.md
docs/cn/: architecture.md  concepts.md  index.md  quick-start.md
docs/cn/reference/: api.md  factor-evaluation.md  index.md  internals.md  public-api.md  transaction-costs.md
docs/en/: architecture.md  concepts.md  index.md  performance.md  quick-start.md
docs/en/reference/: api.md  factor-evaluation.md  index.md  internals.md  public-api.md
docs/zh/: index.md  quick-start.md
examples/: benchmark_efficiency.py  factor_evaluation.py  visualization.py  weight_backtest.py
src/bagelquant_bt/: __init__.py  config.py  costs.py  engine.py  exceptions.py  factor.py  inputs.py  performance.py  reporting.py  results.py  returns.py  visualization.py
tests/: test_costs.py  test_factor_evaluation.py  test_inputs.py  test_reporting.py  test_returns.py  test_visualization.py  test_weight_backtest.py
