[project]
name = "bagelquant-bt"
version = "0.1.5"
description = "Backtesting and factor evaluation for the BagelQuant ecosystem"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "BagelQuant" }]
dependencies = [
    "numpy>=2.4.0",
    "plotly>=6.0.0",
    "polars>=1.35.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "ruff>=0.14.0",
]

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
